Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141194

qmllint - Warnings when setting FlexboxLayout.direction in Visual Studio Code/VSCodium

XMLWordPrintable

      When changing the value of direction on a FlexboxLayout element following warning is given by qmllint in vscode using the native qt extensions:

      Cannot assign binding of type QQuickPositionerAttached to QQuickFlexboxLayout::FlexboxDirection [incompatible-type] qmllint

      This warning does not affect the runtime

        For Gerrit Dashboard: QTBUG-141194
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            jsentity Timur Vaydogan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:

                There is 1 open Gerrit change