tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -1628,6 +1628,9 @@ void TestQmllint::cleanQmlSnippet_data()
     QTest::newRow("usefulExpressionStatement") << u"x: y + 3;"_s << defaultOptions;
     QTest::newRow("usefulExpressionStatement") << u"x: 3;"_s << defaultOptions;
     QTest::newRow("void") << u"function f(): void {}"_s << defaultOptions;
+    QTest::newRow("ambiguity-enum-and-chained-attached-property")
+            << u"import EnumList\nFlexboxLayout { direction: FlexboxLayout.Row; }"_s
+            << defaultOptions;
 }
 
 void TestQmllint::cleanQmlSnippet()
@@ -1635,7 +1638,8 @@ void TestQmllint::cleanQmlSnippet()
     QFETCH(QString, code);
     QFETCH(CallQmllintOptions, options);
 
-    const QString qmlCode = "import QtQuick\nItem {%1}"_L1.arg(code);
+    const QString qmlCode =
+            code.startsWith("import"_L1) ? code : "import QtQuick\nItem {%1}"_L1.arg(code);
     const Result result = Result::clean();
 
     const QJsonArray warnings =
